docs(readme): remove --add-exports instructions
This step has been irrelevant since Terra-- 2.0, which switched to a
properly supported TIFF implementation.

T-- commit:
https://github.com/SmylerMC/terraminusminus/pull/4/commits/c056d18c41c0f842c6a138f01e6f12a6189396b3.